--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Blanketmotor Vidensdeling
+  - name: Vidensdeling
     url: https://github.com/blanketmotor/blanketmotor-vidensdeling/discussions
     about: Stil spørgsmål til blanketudvikling her.
