--- a/.github/ISSUE_TEMPLATE/udviklingsoenske_form.yml
+++ b/.github/ISSUE_TEMPLATE/udviklingsoenske_form.yml
@@ -1,4 +1,4 @@
-name: Udviklingsønske (ny)
+name: Udviklingsønske
 description: Foreslå ny feature eller ændring til eksisterende feature i Blanketmotoren
 labels: udviklingsønske
 body:
